--- a/views/login.html
+++ b/views/login.html
@@ -61,7 +61,24 @@
         </section>
     </header>
     <main>
-
+        <div class="main-login">
+            <div>
+                <h1>Ingresa a tu cuenta</h1>
+            </div>
+            <form action="">
+                <div class="box-form">
+                    <label class="forms" for="usuario">Usuario:</label>
+                    <input class="barra" type="text" name="usuario" id="usuario" placeholder="Ingresá tu Usuario">
+                </div>
+                <div class="box-form">
+                    <label class="forms" for="password">Contraseña:</label>
+                    <input class="barra" type="password" name="password" id="password" placeholder="Ingresá tu Contraseña">
+                </div>
+                <div class="box-button">
+                    <a href="/"><button type="button">Enviar</button></a>
+                </div>
+            </form>
+        </div>
     </main>
     <footer>
         <section class="caja-footer">
