--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -55,7 +55,7 @@ footer .copyright{
 
     .caja-footer{
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         height: 200px;
         padding-top: 10px;
     }
