--- a/views/register.html
+++ b/views/register.html
@@ -124,11 +124,11 @@
                 </div>
                 <div class="box-form">
                     <label class="forms" for="password">Contraseña:</label>
-                    <input class="barra" type="password" name="password" id="password" placeholder="Contraseña">
+                    <input class="barra" type="password" name="password" id="password" placeholder="Ingresá tu Contraseña">
                 </div>
                 <div class="box-form">
                     <label class="forms" for="password">Confirmar contraseña:</label>
-                    <input class="barra" type="password" name="password" id="password" placeholder="Contraseña">
+                    <input class="barra" type="password" name="password" id="password" placeholder="Confirmá tu Contraseña">
                 </div>
                 <div class="box-button">
                     <a href="/"><button type="button">Enviar</button></a>
