--- a/views/register.html
+++ b/views/register.html
@@ -120,15 +120,17 @@
                 </div>
                 <div class="box-form">
                     <label class="forms" for="img-profile">Foto de Usuario:</label>
-                    <input class="img-profile" type="file" name="img-profile" id="img-profile">
+                    <input class="img-profile" type="file" name="img-profile" accept=".jpg" id="img-profile">
                 </div>
                 <div class="box-form">
                     <label class="forms" for="password">Contraseña:</label>
-                    <input class="barra" type="password" name="password" id="password" placeholder="Ingresá tu Contraseña">
+                    <input class="barra" type="password" name="password" id="password"
+                        placeholder="Ingresá tu Contraseña">
                 </div>
                 <div class="box-form">
                     <label class="forms" for="password">Confirmar contraseña:</label>
-                    <input class="barra" type="password" name="password" id="password" placeholder="Confirmá tu Contraseña">
+                    <input class="barra" type="password" name="password" id="password"
+                        placeholder="Confirmá tu Contraseña">
                 </div>
                 <div class="box-button">
                     <a href="/"><button type="button">Enviar</button></a>
